link css to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <head>
-          <script src="https://kit.fontawesome.com/ba1b701e06.js" crossorigin="anonymous"></script><link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet"><link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet"><link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
+          <script src="https://kit.fontawesome.com/ba1b701e06.js" crossorigin="anonymous"></script>
+          <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
+          <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
+          <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
+          <link href="mystyle.css">
         </head>
 
 <nav id="navbar" class="nav">
