--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
           <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
           <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
           <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
-          <link href="mystyle.css">
+          <link rel="stylesheet" type="text/css" href="mystyle.css">
         </head>
 
 <nav id="navbar" class="nav">
