--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <footer>
   <p>
-    **This portfolio was used for a learning experience and is not representative of my work. Please contact me via the contact links if you're interested!
+    **This site is currently a work in progress.
   </p>
   <p>
     &copy; Created for
