Revert "update colors in css"
This reverts commit 7202eef24c3164883bc90753229993f863b5cc9c.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <footer>
   <p>
-    **This site is currently a work in progress.
+    **This portfolio was used for a learning experience and is not representative of my work. Please contact me via the contact links if you're interested!
   </p>
   <p>
     &copy; Created for
