--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <head>
-  <script src="https://kit.fontawesome.com/ba1b701e06.js" crossorigin="anonymous"></script>
-  <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
-  <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
-  <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ba1b701e06.js" 
+  crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/mystyle.css">
   <title>ckn00b.github.io</title>
 </head>
@@ -18,6 +16,10 @@
 <section id="about"
          class="about">
   <h1>Hello, world! I'm CK New.</h1>
+  <p>
+    Just a dude that enjoys code.
+  </p>
+
 </section>
 
 <section id="projects"
@@ -25,7 +27,13 @@
   <h2>These are some of my projects.</h2>
   <div class="projects-grid">
     <a href="" target="_blank"
-       class="project-tile">Project 1</a>
+    class="project-tile">Project 1</a>
+    <a href="" target="_blank" 
+    class="project-tile">Project 2</a>
+    <a href="" target="_blank"
+    class="project-tile">Project 3</a>
+    <a href="" target="_blank"
+    class="project-tile">Project 4</a>
   </div>
 </section>
 
