modified intro message

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          class="about">
   <h1>Hello, world! I'm CK New.</h1>
   <p>
-    Just a dude that enjoys code.
+    I'm a software developer and looking for work.
   </p>
 
 </section>
