edited intro, added Projects arrow, edited footer

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
          class="about">
   <h1>Hello, world! I'm CK New.</h1>
   <p>
-    I'm a software developer and looking for work.
+    I'm a software developer based in Fayetteville, NC. 
   </p>
 
 </section>
 
 <section id="projects"
          class="projects-section">
-  <h2>These are some of my projects.</h2>
+  <h2>These are some of my projects. ⬇</h2>
   <div class="projects-grid">
     <a href="" target="_blank"
     class="project-tile">Project 1</a>
@@ -53,12 +53,6 @@
 
 <footer>
   <p>
-    **This site is currently a work in progress.
-  </p>
-  <p>
-    &copy; Created for
-    <a href="https://www.freecodecamp.com/" target="_blank"
-      >freeCodeCamp <i class="fab fa-free-code-camp"></i
-    ></a>
+    *This site is currently a work in progress.
   </p>
 </footer>
