--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <head>
-  <script src="https://kit.fontawesome.com/ba1b701e06.js" 
-  crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+  <script
+    src="https://kit.fontawesome.com/ba1b701e06.js"
+    crossorigin="anonymous"
+  ></script>
+  <link rel="stylesheet" type="text/css" href="css/mystyle.css" />
   <title>ckn00b.github.io</title>
 </head>
 
@@ -13,64 +15,87 @@
   </ul>
 </nav>
 
-<section id="about"
-         class="about">
+<section id="about" class="about">
   <h1>Hello, world! I'm CK New.</h1>
   <p>
-    I'm a software developer based in Fayetteville, NC. I love building things, tinkering with technology, and solving problems with creative thinking is what
-    drives me and makes my work enjoyable. I'm currently looking for work, either near my neck of the woods or remote, and you can contact me via the links
-    at the bottom of this page.
+    I'm a software developer based in Fayetteville, NC. I love building things,
+    tinkering with technology, and solving problems with creative thinking is
+    what drives me and makes my work enjoyable. I'm currently looking for work,
+    either near my neck of the woods or remote, and you can contact me via the
+    links at the bottom of this page.
   </p>
   <div class="interests">
     Besides software, my other interests include:
     <ul>
-      <li><strong>Music</strong> is one my greatest passions. I have very eclectic taste and enjoy listening to and talking about all sorts of music.
-      You can be sure to see me setting the mood with my favorite jams, whether I'm working behind a keyboard or cooking up my favorite meals.</li>
-      <li><strong>Food</strong> makes me happy! Next to nothing puts a bigger smile on my face than sitting down (or standing next to a food truck)
-      and enjoying something I've had 1000 times or never before.</li>
-      <li><strong>Travel</strong> is something we should all experience. I grew up in a small town and joined the military right out of high school,
-      and the journey I've made to get here now has taught me so much I would've never known. I've travelled numerous states and a few countries so far,
-      and I plan on travelling to many more!</li>
-      <li><strong>Games!</strong> Card games, board games, and video games are a favorite pastime of mine. Kicking back and exploring a new world in my
-      space ship or playing a few hands of poker has a way of reenergizing and refueling me for my next coding session!</li>
-      <li><strong>Fishing</strong> is a hobby that I enjoyed at a young age and only very recently got back into. It's a great way to enjoy the outdoors
-      and challenge myself.</li>
+      <li>
+        <strong>Music</strong> is one my greatest passions. I have very eclectic
+        taste and enjoy listening to and talking about all sorts of music. You
+        can be sure to see me setting the mood with my favorite jams, whether
+        I'm working behind a keyboard or cooking up my favorite meals.
+      </li>
+      <li>
+        <strong>Food</strong> makes me happy! Next to nothing puts a bigger
+        smile on my face than sitting down (or standing next to a food truck)
+        and enjoying something I've had 1000 times or never before.
+      </li>
+      <li>
+        <strong>Travel</strong> is something we should all experience. I grew up
+        in a small town and joined the military right out of high school, and
+        the journey I've made to get here now has taught me so much I would've
+        never known. I've travelled numerous states and a few countries so far,
+        and I plan on travelling to many more!
+      </li>
+      <li>
+        <strong>Games!</strong> Card games, board games, and video games are a
+        favorite pastime of mine. Kicking back and exploring a new world in my
+        space ship or playing a few hands of poker has a way of reenergizing and
+        refueling me for my next coding session!
+      </li>
     </ul>
   </div>
-
 </section>
 
-<section id="projects"
-         class="projects-section">
+<section id="projects" class="projects-section">
   <h2>These are some of my projects. ⬇</h2>
   <div class="projects-grid">
-    <a href="" target="_blank"
-    class="project-tile">Project 1</a>
-    <a href="" target="_blank" 
-    class="project-tile">Project 2</a>
-    <a href="" target="_blank"
-    class="project-tile">Project 3</a>
-    <a href="" target="_blank"
-    class="project-tile">Project 4</a>
+    <a href="" target="_blank" class="project-tile">Project 1</a>
+    <a href="" target="_blank" class="project-tile">Project 2</a>
+    <a href="" target="_blank" class="project-tile">Project 3</a>
+    <a href="" target="_blank" class="project-tile">Project 4</a>
   </div>
 </section>
 
 <section id="contact" class="contact-section">
   <div class="contact-section-header">
     <h2>Need a developer?</h2>
-    <p>Feel free to message me. I'm down for a cup of coffee!</p>
+    <p>Let's get a coffee! Feel free to contact me:</p>
   </div>
   <div class="contact-links">
-    <a href="https://twitter.com/CKn00b" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
-    <a href="https://linkedin.com/in/cknew" target="_blank"class="btn contact-details"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    <a id="profile-link" href="https://github.com/ckn00b" target="_blank"
-       class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-    <a href="mailto:cknew.dev@gmail.com"class="btn contact-details"><i class="fas fa-at"></i> Email</a>
+    <a
+      href="https://twitter.com/CKn00b"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-twitter"></i> Twitter</a
+    >
+    <a
+      href="https://linkedin.com/in/cknew"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-linkedin"></i> LinkedIn</a
+    >
+    <a
+      id="profile-link"
+      href="https://github.com/ckn00b"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-github"></i> GitHub</a
+    >
+    <a href="mailto:cknew.dev@gmail.com" class="btn contact-details"
+      ><i class="fas fa-at"></i> Email</a
+    >
   </div>
 </section>
 
 <footer>
-  <p>
-    *This site is currently a work in progress.
-  </p>
+  <p>*This site is currently a work in progress.</p>
 </footer>
