added some projects to project section

--- a/index.html
+++ b/index.html
@@ -58,10 +58,27 @@
 <section id="projects" class="projects-section">
   <h2>These are some of my projects. ⬇</h2>
   <div class="projects-grid">
-    <a href="" target="_blank" class="project-tile">Project 1</a>
-    <a href="" target="_blank" class="project-tile">Project 2</a>
-    <a href="" target="_blank" class="project-tile">Project 3</a>
-    <a href="" target="_blank" class="project-tile">Project 4</a>
+    <a
+      href="https://github.com/ckn00b/myLearning"
+      target="_blank"
+      class="project-tile"
+      >My Learning</a
+    >
+    <p>
+      This is where I keep my day-to-day learning materials and projects. I
+      practice coding and building things and keep them here!
+    </p>
+    <a
+      href="https://github.com/ckn00b/Dataman"
+      target="_blank"
+      class="project-tile"
+      >Dataman</a
+    >
+    <p>
+      Dataman was a project I completed using python to replicate a fun little
+      calculator (toy?) that makes mathematics fun for (hopefully?) the child
+      <em>and</em> parent!
+    </p>
   </div>
 </section>
 
